Added frontend features.

--- a/Frontend/app/views/deliverypersons.html
+++ b/Frontend/app/views/deliverypersons.html
@@ -4,7 +4,7 @@
 
     <div class="row">
         <!-- Loading -->
-        <div ng-show="loading" class="col-md-offset-5 col-md-4">
+        <div ng-show="pageLoading" class="col-md-offset-5 col-md-4">
             <div class="wobblebar"></div>
             <br /><br />
         </div>
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Content -->
-    <div ng-show="outerError == null && !loading">
+    <div ng-show="outerError == null && !pageLoading">
         <button type="button" class="btn btn-primary" ng-click="clear()" data-toggle="modal" data-target="#addModal">
             <span class="glyphicon glyphicon-plus"></span>
             Add New Delivery Person
@@ -70,7 +70,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button ng-hide="loading" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add New Delivery Person</h4>
             </div>
 
@@ -103,8 +103,9 @@
 
             <!-- Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="addDPerson()">Save changes</button>
+                <button ng-hide="loading" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button ng-hide="loading" type="button" class="btn btn-primary" ng-click="addDPerson()">Save changes</button>
+                <span ng-show="loading" class="wobblebar"></span>
             </div>
         </div>
     </div>
@@ -146,7 +147,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button ng-hide="loading" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Edit Delivery Person Details</h4>
             </div>
 
@@ -179,8 +180,9 @@
 
             <!-- Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="editDPerson()">Save changes</button>
+                <button ng-hide="loading" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button ng-hide="loading" type="button" class="btn btn-primary" ng-click="editDPerson()">Save changes</button>
+                <span ng-show="loading" class="wobblebar"></span>
             </div>
         </div>
     </div>
@@ -193,7 +195,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button ng-hide="loading" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Delete Delivery Person</h4>
             </div>
 
@@ -209,11 +211,12 @@
 
             <!-- Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" ng-click="deleteDPerson()">
+                <button ng-hide="loading" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button ng-hide="loading" type="button" class="btn btn-danger" ng-click="deleteDPerson()">
                     <span class="glyphicon glyphicon-warning-sign"></span>
                     Delete Delivery Person
                 </button>
+                <span ng-show="loading" class="wobblebar"></span>
             </div>
         </div>
     </div>
