--- a/Frontend/app/views/customers.html
+++ b/Frontend/app/views/customers.html
@@ -4,7 +4,7 @@
 
     <div class="row">
         <!-- Loading -->
-        <div ng-show="loading" class="col-md-offset-5 col-md-4" >
+        <div ng-show="pageLoading" class="col-md-offset-5 col-md-4" >
             <div class="wobblebar"></div>
             <br /><br />
         </div>
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Content -->
-    <div ng-show="outerError == null && !loading">
+    <div ng-show="outerError == null && !pageLoading">
         <button type="button" class="btn btn-primary" ng-click="clear()" data-toggle="modal" data-target="#addModal">
             <span class="glyphicon glyphicon-plus"></span>
             Add New Customer
@@ -77,7 +77,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button ng-hide="loading" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Add New Customer</h4>
             </div>
 
@@ -122,8 +122,9 @@
 
             <!-- Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="addCustomer()">Save changes</button>
+                <button ng-hide="loading" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button ng-hide="loading" type="button" class="btn btn-primary" ng-click="addCustomer()">Save changes</button>
+                <span ng-show="loading" class="wobblebar"></span>
             </div>
         </div>
     </div>
@@ -169,7 +170,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button ng-hide="loading" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Edit Customer Details</h4>
             </div>
 
@@ -214,8 +215,9 @@
 
             <!-- Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" ng-click="editCustomer()">Save changes</button>
+                <button ng-hide="loading" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button ng-hide="loading" type="button" class="btn btn-primary" ng-click="addCustomer()">Save changes</button>
+                <span ng-show="loading" class="wobblebar"></span>
             </div>
         </div>
     </div>
@@ -228,7 +230,7 @@
 
             <!-- Header -->
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button ng-hide="loading" type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Delete Customer</h4>
             </div>
 
@@ -248,11 +250,12 @@
 
             <!-- Footer -->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" ng-click="deleteCustomer()">
+                <button ng-hide="loading" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button ng-hide="loading" type="button" class="btn btn-danger" ng-click="deleteCustomer()">
                     <span class="glyphicon glyphicon-warning-sign"></span>
                     Delete Customer
                 </button>
+                <span ng-show="loading" class="wobblebar"></span>
             </div>
         </div>
     </div>
