Edited delivery persons frontend.

--- a/Frontend/app/views/deliverypersons.html
+++ b/Frontend/app/views/deliverypersons.html
@@ -1,5 +1,5 @@
 <div>
-    <h3>Delivery Personnel</h3>
+    <h2>Delivery Personnel</h2>
     <br />
 
     <div class="row">
@@ -32,7 +32,7 @@
             Add New Delivery Person
         </button>
         <br /><br />
-        <table class="table table-striped" ng-init="page(0)">
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Last Name</th>
