--- a/Frontend/app/views/main.html
+++ b/Frontend/app/views/main.html
@@ -3,13 +3,9 @@
     <br />
     <p class="lead">
         <img class="" src="../images/pizza-chef.png" alt="I'm-a the PizzaChef" width="30%" height="30%">
-        <br>
-        <br />
+        <br><br>
         Always a pleasure serving you with the best pizza in town!
     </p>
     <br />
-    <p><a class="btn btn-lg btn-success" ng-href="#/flavors"><span class="glyphicon glyphicon-ok"></span> I want Pizza!</a></p>
-</div>
-
-<div class="row">
+    <p><a class="btn btn-lg btn-success" ng-href="flavors"><span class="glyphicon glyphicon-ok"></span> I want Pizza!</a></p>
 </div>
